[project]
name = "acp-peak-2025-portfolio-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
