[project]
name = "acp-peak-2025-portfolio-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "fsspec>=2025.10.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.3",
    "python-calamine>=0.5.4",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "s3fs>=2025.10.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
